# serializer version: 1
# name: TestBreadcrumb.test_category_forum[category_forum]
  '''
  <nav aria-label="Fil d'ariane" class="c-breadcrumb">
          <ol class="breadcrumb">
              <li class="breadcrumb-item">Retourner vers</li>
              <li class="breadcrumb-item">
                  
                      <a class="matomo-event" data-matomo-action="view" data-matomo-category="engagement" data-matomo-option="documentation_breadcrumb" href="/documentation/">Documentation</a>
                  
              </li>
              
              
          </ol>
      </nav>
  '''
# ---
# name: TestBreadcrumb.test_child_category_forum[child_category_forum]
  '''
  <nav aria-label="Fil d'ariane" class="c-breadcrumb">
          <ol class="breadcrumb">
              <li class="breadcrumb-item">Retourner vers</li>
              <li class="breadcrumb-item">
                  
                      <a class="matomo-event" data-matomo-action="view" data-matomo-category="engagement" data-matomo-option="documentation_breadcrumb" href="/documentation/">Documentation</a>
                  
              </li>
              
                  
                      <li class="breadcrumb-item">
                          <a class="matomo-event" data-matomo-action="view" data-matomo-category="engagement" data-matomo-option="forum" href="/forum/a-category-[PK of Forum]/">A Category</a>
                      </li>
                  
              
              
          </ol>
      </nav>
  '''
# ---
# name: TestBreadcrumb.test_forum[forum]
  '''
  <nav aria-label="Fil d'ariane" class="c-breadcrumb">
          <ol class="breadcrumb">
              <li class="breadcrumb-item">Retourner vers</li>
              <li class="breadcrumb-item">
                  
                      <a class="matomo-event" data-matomo-action="view" data-matomo-category="engagement" data-matomo-option="topics_breadcrumb" href="/topics/">Espace d'échanges</a>
                  
              </li>
              
              
          </ol>
      </nav>
  '''
# ---
# name: TestBreadcrumb.test_grandchild_category_forum[grandchild_category_forum]
  '''
  <nav aria-label="Fil d'ariane" class="c-breadcrumb">
          <ol class="breadcrumb">
              <li class="breadcrumb-item">Retourner vers</li>
              <li class="breadcrumb-item">
                  
                      <a class="matomo-event" data-matomo-action="view" data-matomo-category="engagement" data-matomo-option="documentation_breadcrumb" href="/documentation/">Documentation</a>
                  
              </li>
              
                  
                      <li class="breadcrumb-item">
                          <a class="matomo-event" data-matomo-action="view" data-matomo-category="engagement" data-matomo-option="forum" href="/forum/b-category-[PK of Forum]/">B Category</a>
                      </li>
                  
              
                  
                      <li class="breadcrumb-item">
                          <a class="matomo-event" data-matomo-action="view" data-matomo-category="engagement" data-matomo-option="forum" href="/forum/b-category-forum-[PK of Forum]/">B Category - Forum</a>
                      </li>
                  
              
              
          </ol>
      </nav>
  '''
# ---
# name: TestBreadcrumb.test_newsfeed_forum[newsfeed_forum]
  '''
  <nav aria-label="Fil d'ariane" class="c-breadcrumb">
          <ol class="breadcrumb">
              <li class="breadcrumb-item">Retourner vers</li>
              <li class="breadcrumb-item">
                  
                      <a class="matomo-event" data-matomo-action="view" data-matomo-category="engagement" data-matomo-option="newsfeed_breadcrumb" href="/news/">Actualités</a>
                  
              </li>
              
              
          </ol>
      </nav>
  '''
# ---
# name: TestBreadcrumb.test_sub_discussion_area_forum[sub_discussion_area_forum]
  '''
  <nav aria-label="Fil d'ariane" class="c-breadcrumb">
          <ol class="breadcrumb">
              <li class="breadcrumb-item">Retourner vers</li>
              <li class="breadcrumb-item">
                  
                      <a class="matomo-event" data-matomo-action="view" data-matomo-category="engagement" data-matomo-option="topics_breadcrumb" href="/topics/">Espace d'échanges</a>
                  
              </li>
              
                  
              
              
          </ol>
      </nav>
  '''
# ---
# name: TestBreadcrumb.test_sub_forum[sub_forum]
  '''
  <nav aria-label="Fil d'ariane" class="c-breadcrumb">
          <ol class="breadcrumb">
              <li class="breadcrumb-item">Retourner vers</li>
              <li class="breadcrumb-item">
                  
                      <a class="matomo-event" data-matomo-action="view" data-matomo-category="engagement" data-matomo-option="topics_breadcrumb" href="/topics/">Espace d'échanges</a>
                  
              </li>
              
                  
                      <li class="breadcrumb-item">
                          <a class="matomo-event" data-matomo-action="view" data-matomo-category="engagement" data-matomo-option="forum" href="/forum/b-forum-[PK of Forum]/">B Forum</a>
                      </li>
                  
              
              
          </ol>
      </nav>
  '''
# ---
# name: TestDocumentationForumContent.test_documentation_forum_header_content[template_documentation_link_to_parent]
  '<a class="matomo-event h3 text-decoration-none d-inline-block" data-matomo-action="view" data-matomo-category="engagement" data-matomo-option="forum" href="/forum/parent-forum-9999/">Les autres fiches du thème Parent-Forum</a>'
# ---
# name: TestDocumentationForumContent.test_documentation_forum_share_actions[template_documentation_social_share]
  '''
  <button aria-expanded="false" aria-haspopup="true" class="btn btn-sm btn-ico-only btn-secondary" data-bs-toggle="dropdown" id="dropdownMenuSocialShare10000" type="button">
      <i aria-label="Partager ce sujet sur " class="ri-share-fill ri-lg"></i>
  </button>
  '''
# ---
# name: TestDocumentationForumContent.test_documentation_forum_share_actions[template_documentation_upvotes]
  '''
  <div class="d-inline-block" id="upvotesarea10000">
      
          
              <a class="btn btn-sm btn-ico-only btn-link btn-secondary" data-bs-placement="top" data-bs-toggle="tooltip" href="/inclusion_connect/authorize?next=%2Fforum%2Ftest-forum-10000%2F%2310000" rel="nofollow" title="Connectez-vous pour sauvegarder">
                  <i aria-hidden="true" class="ri-bookmark-line me-1"></i><span>0</span>
              </a>
          
      
  </div>
  '''
# ---
# name: TestForumViewContent.test_not_rated_forum[not_rated_forum]
  '''
  <div class="mb-5 rating" id="rating-area1">
          <hr/>
          
              <h3 class="h3">Cette fiche vous a-t-elle été utile ?</h3>
              <form hx-post="/forum/b-category-forum-[PK of Forum]/rate/" hx-swap="outerHTML" hx-target="#rating-area1" id="rating-button">
                  <div aria-label="Notation de la fiche pratique" class="btn-group btn-group-lg" role="group">
                      
                          <button class="btn btn-ico-only btn-secondary matomo-event" data-matomo-action="rate" data-matomo-category="engagement" data-matomo-option="post" name="rating" type="submit" value="1">
                              <i aria-hidden="true" class="ri-star-line font-weight-medium"></i>
                          </button>
                      
                          <button class="btn btn-ico-only btn-secondary matomo-event" data-matomo-action="rate" data-matomo-category="engagement" data-matomo-option="post" name="rating" type="submit" value="2">
                              <i aria-hidden="true" class="ri-star-line font-weight-medium"></i>
                          </button>
                      
                          <button class="btn btn-ico-only btn-secondary matomo-event" data-matomo-action="rate" data-matomo-category="engagement" data-matomo-option="post" name="rating" type="submit" value="3">
                              <i aria-hidden="true" class="ri-star-line font-weight-medium"></i>
                          </button>
                      
                          <button class="btn btn-ico-only btn-secondary matomo-event" data-matomo-action="rate" data-matomo-category="engagement" data-matomo-option="post" name="rating" type="submit" value="4">
                              <i aria-hidden="true" class="ri-star-line font-weight-medium"></i>
                          </button>
                      
                          <button class="btn btn-ico-only btn-secondary matomo-event" data-matomo-action="rate" data-matomo-category="engagement" data-matomo-option="post" name="rating" type="submit" value="5">
                              <i aria-hidden="true" class="ri-star-line font-weight-medium"></i>
                          </button>
                      
                  </div>
              </form>
          
      </div>
  '''
# ---
# name: TestForumViewContent.test_rated_forum[rated_forum]
  '''
  <div class="mb-5 rating" id="rating-area1">
          <hr/>
          
              <h3 class="h3">Merci d'avoir noté cette fiche !</h3>
              <div aria-label="Notation de la fiche pratique" class="btn-group btn-group-lg" role="group">
                  
                      <div class="btn btn-ico-only">
                          
                              <i aria-hidden="true" class="ri-star-fill font-weight-medium"></i>
                          
                      </div>
                  
                      <div class="btn btn-ico-only">
                          
                              <i aria-hidden="true" class="ri-star-fill font-weight-medium"></i>
                          
                      </div>
                  
                      <div class="btn btn-ico-only">
                          
                              <i aria-hidden="true" class="ri-star-fill font-weight-medium"></i>
                          
                      </div>
                  
                      <div class="btn btn-ico-only">
                          
                              <i aria-hidden="true" class="ri-star-fill font-weight-medium"></i>
                          
                      </div>
                  
                      <div class="btn btn-ico-only">
                          
                              <i aria-hidden="true" class="ri-star-fill font-weight-medium"></i>
                          
                      </div>
                  
              </div>
          
      </div>
  '''
# ---
